--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar">
-             <div class="navbar-left">
+            <div class="navbar-left">
 
-            <a href="#">
-                <img id="logo" src="/src/img/logo.png" alt="CodePen Logo">
-            </a>
+                <a href="#">
+                    <img id="logo" src="src/img/logo.png" alt="CodePen Logo">
+                </a>
                 <div class="navigation">
-                <span id="explore">EXPLORE</span>
-                <div class="links">
-                    <li><b><a href="#pens">Pens</a></b></li>
-                    <li><b><a href="#projects">Projects</a></b></li>
-                    <li><b><a href="#post">Post</a></b></li>
-                    <li><b><a href="#collections">Collections</a></b></li>
-                </div>
+                    <span id="explore">EXPLORE</span>
+                    <div class="links">
+                        <li><b><a href="#pens">Pens</a></b></li>
+                        <li><b><a href="#projects">Projects</a></b></li>
+                        <li><b><a href="#post">Post</a></b></li>
+                        <li><b><a href="#collections">Collections</a></b></li>
+                    </div>
                 </div>
 
 
                 <div class="spark">
                     <p>Spark</p>
                     <a href="#">
-                        <img class="img" src="/src/img/down-chevron.svg" alt="Spark Icon as SVG">
+                        <img class="img" src="src/img/down-chevron.svg" alt="Spark Icon as SVG">
                     </a>
                 </div>
             </div>
             <div class="navbar-right">
                 <button id="create-button">
                     <p>Create</p>
-                    <img class="img" src="/src/img/down-chevron-green.svg" alt="Create Icon as SVG" />
+                    <img class="img" src="src/img/down-chevron-green.svg" alt="Create Icon as SVG" />
                 </button>
                 <div class="search">
                     <div class="search">
-                        <img id="search" src="/src/img/search.svg" alt="Search Icon as SVG" />
+                        <img id="search" src="src/img/search.svg" alt="Search Icon as SVG" />
                     </div>
                 </div>
                 <button>
@@ -49,14 +51,16 @@
                     Sign Up
                 </button>
             </div>
-            
+
         </nav>
-       
+
     </header>
     <main class="content">
         <div class="left-content">
-            <h1>CodePen is a <b>social development <br> environment</b> for front-end designers <br> and developers. 👋 </h1>
-            <h2>It's the best place to build and deploy a <br> website, show off your work, build test cases, <br> and find inspiration.</h2>
+            <h1>CodePen is a <b>social development <br> environment</b> for front-end designers <br> and developers. 👋
+            </h1>
+            <h2>It's the best place to build and deploy a <br> website, show off your work, build test cases, <br> and
+                find inspiration.</h2>
             <div class="buttons">
                 <button id="sign-up-button">
                     Sign up for Free
@@ -68,7 +72,7 @@
         </div>
         <div class="right-content">
             <p id="project-title">This is <span id="projects">CodePen Projects</span></p>
-            <img id="img-content" src="/src/img/right-content.png" alt="Right Content Project">
+            <img id="img-content" src="src/img/right-content.png" alt="Right Content Project">
         </div>
     </main>
     <footer class="footer">
@@ -79,4 +83,5 @@
     </footer>
 
 </body>
+
 </html>
