Updated URL's on Source File

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="navbar-left">
 
                 <a href="#">
-                    <img id="logo" src="src/img/logo.png" alt="CodePen Logo">
+                    <img id="logo" src="logo.png" alt="CodePen Logo">
                 </a>
                 <div class="navigation">
                     <span id="explore">EXPLORE</span>
@@ -30,18 +30,18 @@
                 <div class="spark">
                     <p>Spark</p>
                     <a href="#">
-                        <img class="img" src="src/img/down-chevron.svg" alt="Spark Icon as SVG">
+                        <img class="img" src="down-chevron.svg" alt="Spark Icon as SVG">
                     </a>
                 </div>
             </div>
             <div class="navbar-right">
                 <button id="create-button">
                     <p>Create</p>
-                    <img class="img" src="src/img/down-chevron-green.svg" alt="Create Icon as SVG" />
+                    <img class="img" src="down-chevron-green.svg" alt="Create Icon as SVG" />
                 </button>
                 <div class="search">
                     <div class="search">
-                        <img id="search" src="src/img/search.svg" alt="Search Icon as SVG" />
+                        <img id="search" src="search.svg" alt="Search Icon as SVG" />
                     </div>
                 </div>
                 <button>
@@ -72,7 +72,7 @@
         </div>
         <div class="right-content">
             <p id="project-title">This is <span id="projects">CodePen Projects</span></p>
-            <img id="img-content" src="src/img/right-content.png" alt="Right Content Project">
+            <img id="img-content" src="right-content.png" alt="Right Content Project">
         </div>
     </main>
     <footer class="footer">
